# IOS-Notifier

./: .gitignore  OOP.py  README.md  Test.txt  development.cer  leader menu.xcf
Emergency Notifier/: Emergency-Notifier-Info.plist  Emergency_NotifierApp.swift
Emergency Notifier/Emergency Notifier/: Admin Menu.swift  ContentView.swift  Create Emergency.swift  Emergency Notifier.entitlements  Emergency_NotifierApp.swift  Employee Menu.swift  Firefighter.swift  GoogleService-Info.plist  Leader Menu.swift  Main Page Firefighter.swift  Main Page Team Head.swift  Operational Manager.swift  Operational Manager.swift.swift  Settings Page.swift  Side Menu.swift  Team Head.swift
Emergency Notifier/Emergency Notifier.xcodeproj/: project.pbxproj
Emergency Notifier/Emergency Notifier/Assets.xcassets/Coding Projects/Python/Git/Bot/pyproject.dataset/: pyproject.toml
Emergency Notifier/Emergency NotifierTests/: Emergency_NotifierTests.swift
Emergency Notifier/Emergency NotifierUITests/: Emergency_NotifierUITests.swift  Emergency_NotifierUITestsLaunchTests.swift
EmergencyNotifier/: EmergencyNotifierApp.swift  GoogleService-Info.plist
EmergencyNotifier 2022-01-25 6-35-08 am/: App Thinning Size Report.txt  DistributionSummary.plist  ExportOptions.plist  app-thinning.plist
EmergencyNotifier 2022-01-25 6-35-08 am/Apps/: EmergencyNotifier-6B03B382-99E2-43D9-B3E3-016A64F9016C.ipa  EmergencyNotifier-94C58B07-A8E9-48B4-803B-2477670AF595.ipa  EmergencyNotifier-9FCD6CF2-1662-49F9-BD52-0A56CF5CACA0.ipa  EmergencyNotifier-F8174B03-DFB2-4C83-8F7E-1FB70964787A.ipa  EmergencyNotifier.ipa
(+69 files in other folders)
