[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
textblob = "^0.17.1"
youtube_dl = "^2021.12.17"
Flask = "^2.0.2"
google-api-python-client = "^2.33.0"
praw = "^7.5.0"
pytube = "^11.0.2"
spotipy = "^2.19.0"
PyNaCl = "^1.4.0"
twitchAPI = "^2.5.1"
TwitterAPI = "^2.7.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
